--- a/site.css
+++ b/site.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     width: 85%;
     margin: auto;
     padding: 35px 0;
@@ -6,40 +6,62 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo{
-    width:120px;
-    cursor: pointer;  
+
+.logo {
+    width: 120px;
+    cursor: pointer;
+    margin-left: -130px;
+    margin-top: 0px;
 }
-.navbar ul li{
+
+.navbar ul li {
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     position: relative;
+    color: white;
 }
-.navbar ul li::after{
+
+.navbar ul li::after {
     content: '';
     height: 3px;
     width: 100%;
-    background: #009688;
+    /* background: #009688; */
     position: absolute;
     left: 0;
-    bottom: 0;  
+    bottom: 0;
 }
-.content{
+
+.content {
     width: 100%;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-    color:white
+    color: white
 }
-.conten h1{
+
+.conten h1 {
     font-size: 70px;
     margin-top: 80px;
 }
-.content p{
+
+.content p {
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
 }
 
+.navButton {
+    text-decoration: none;
+    color: white;
+    border-bottom: 2px solid gray;
+}
+
+.button {
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    cursor: pointer;
+    border: 1px solid aqua;
+}
